# gestor_entidades

./: .gitignore  README.md  manage.py  pyproject.toml
.github/workflows/: main_entidadesdpeapp.yml
data/: ambitos_accion.csv  cantones.csv  funciones.csv  parroquias.csv  provincias.csv  tipos_entidades.csv  tipos_gad.csv  tipos_organizaciones.csv  zonales.csv
entidades/: admin.py  forms.py  urls.py  views.py
entidades/migrations/: 0001_initial.py  0002_alter_tipogad_options_alter_zonal_nombre.py  0003_entidad.py  0004_alter_entidad_file_ordenanza_and_more.py
entidades/models/: __init__.py  catalogs.py  entidad.py
entidades/templates/: index.html
gestor_entidades/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: ambitos_accion_feeder.py  canton_feeder.py  funciones_feeder.py  parroquia_feeder.py  provincia_feeder.py  tipos_entidades_feeder.py  tipos_gad_feeder.py  tipos_organizaciones_feeder.py  zonales_feeder.py
static/js/: form-entidad.js
